--- a/Regression/Linear Regression.ipynb
+++ b/Regression/Linear Regression.ipynb
@@ -19,7 +19,7 @@
     "------\n",
     "> 给定数据集$D=\\{(x_1,y_1),(x_2,y_2),\\dots,(x_m,y_m)\\}$，其中，$x_i=(x_{i1};x_{i2};\\dots;x_{id}),y_i\\subseteq R$。“线性回归”$（linear\\; regression）$试图学得一个线性模型以尽可能地预测实值输出标记。\n",
     "\n",
-    "> 线性回归试图学得$$f(x_i)=\\omega x_i + b，使得f(x_i)\\approx y_i$$\n",
+    "> 线性回归试图学得$f(x_i)=\\omega x_i + b$，使得$f(x_i)\\approx y_i$\n",
     "\n",
     "> **均方误差**是回归任务中最常用的性能度量，因此可以试图让均方误差最小化来求解$\\omega$和$b$\n",
     "$$\\begin{align}\n",
@@ -44,9 +44,7 @@
     "\n",
     "多元线性回归$(multivariate\\;linear\\;regression)$\n",
     "----------------------------------------\n",
-    "> 对于\n",
-    "$$f(\\bf {x_i})={\\bf \\omega}^T \\bf {x_i} + b$$\n",
-    "把$\\omega$和$b$吸收入向量形式$\\hat{\\omega}=(\\omega;b)$，相应的，把数据集$D$表示为一个$m\\times (d+1)$大小的矩阵$X$，其中每行对于于一个示例，该行前$d$个属性值，最后一个元素恒置为1，即\n",
+    "> 对于$\\;f(\\bf {x_i})={\\bf \\omega}^T \\bf {x_i} + b\\;$把$\\omega$和$b$吸收入向量形式$\\;\\hat{\\omega}=(\\omega;b)\\;$，相应的，把数据集$D$表示为一个$m\\times (d+1)$大小的矩阵$X$，其中每行对于于一个示例，该行前$d$个属性值，最后一个元素恒置为1，即\n",
     "$$X=\n",
     "    \\begin{pmatrix}\n",
     "        x_{11} & x_{12} & \\cdots & x_{1d} & 1 \\\\\n",
@@ -74,7 +72,28 @@
     "\\end{align}$$\n",
     "\n",
     "> 对$\\hat{\\omega}$求导得到\n",
-    ">> 矩阵求导公式： $$ssss$$"
+    ">> 矩阵求导公式： \n",
+    "$$\\begin{align}\n",
+    "\\frac{dAB}{dB}&=A^T \\\\\n",
+    "\\frac{dA^TB}{dA}&=B \\\\\n",
+    "\\frac{dX^TAX}{dX}&=2AX \\\\\n",
+    "\\end{align}$$\n",
+    "\n",
+    "> \n",
+    "$$\\begin{align}\n",
+    "\\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}} &= \\frac{1}{2}(2X^TX\\omega-X^T\\omega-X^T\\omega-0)    \\\\\n",
+    "&=\\frac{1}{2}(2X^TX\\omega-2X^T\\omega)  \\\\\n",
+    "&=X^TX\\omega-X^Ty  \\\\\n",
+    "\\end{align}$$\n",
+    "\n",
+    "> 当$X^TX$为满秩矩阵（$full-rank \\; matrix$）或正定矩阵（$positive\\;definite\\;matrix$）时，令 $\\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}}=0$\n",
+    "$$\\begin{align}\n",
+    "&X^TX\\hat{\\omega}-X^Ty=0 \\\\\n",
+    "&X^TX\\hat{\\omega}=X^Ty \\\\\n",
+    "&\\hat{\\omega}=(X^TX)^{-1}X^Ty\\\\\n",
+    "\\end{align}$$\n",
+    "> 其中$(X^TX)^{-1}$是矩阵$(X^TX)$的逆矩阵。令$\\; \\hat{x}_i=(x_i, 1)\\;$故，可得多元线性回归模型为\n",
+    "$$f(\\hat{x}_i)={\\hat{x}_i}^T(X^TX)^{-1}X^Ty$$"
    ]
   },
   {
