--- a/Regression/Linear Regression.ipynb
+++ b/Regression/Linear Regression.ipynb
@@ -88,12 +88,15 @@
     "\n",
     "> 当$X^TX$为满秩矩阵（$full-rank \\; matrix$）或正定矩阵（$positive\\;definite\\;matrix$）时，令 $\\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}}=0$\n",
     "$$\\begin{align}\n",
-    "&X^TX\\hat{\\omega}-X^Ty=0 \\\\\n",
-    "&X^TX\\hat{\\omega}=X^Ty \\\\\n",
-    "&\\hat{\\omega}=(X^TX)^{-1}X^Ty\\\\\n",
+    "X^TX\\hat{\\omega}-X^Ty&=0 \\\\\n",
+    "X^TX\\hat{\\omega}&=X^Ty \\\\\n",
+    "\\hat{\\omega}&=(X^TX)^{-1}X^Ty\\\\\n",
     "\\end{align}$$\n",
     "> 其中$(X^TX)^{-1}$是矩阵$(X^TX)$的逆矩阵。令$\\; \\hat{x}_i=(x_i, 1)\\;$故，可得多元线性回归模型为\n",
-    "$$f(\\hat{x}_i)={\\hat{x}_i}^T(X^TX)^{-1}X^Ty$$"
+    "$$f(\\hat{x}_i)={\\hat{x}_i}^T(X^TX)^{-1}X^Ty$$\n",
+    "\n",
+    "正则化(regularization)\n",
+    "------------------\n"
    ]
   },
   {
