--- a/Regression/Linear Regression.ipynb
+++ b/Regression/Linear Regression.ipynb
@@ -81,8 +81,8 @@
     "\n",
     "> \n",
     "$$\\begin{align}\n",
-    "\\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}} &= \\frac{1}{2}(2X^TX\\omega-X^T\\omega-X^T\\omega-0)    \\\\\n",
-    "&=\\frac{1}{2}(2X^TX\\omega-2X^T\\omega)  \\\\\n",
+    "\\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}} &= \\frac{1}{2}(2X^TX\\omega-X^Ty-0)    \\\\\n",
+    "&=\\frac{1}{2}(2X^TX\\omega-2X^Ty)  \\\\\n",
     "&=X^TX\\omega-X^Ty  \\\\\n",
     "\\end{align}$$\n",
     "\n",
@@ -95,7 +95,7 @@
     "> 其中$(X^TX)^{-1}$是矩阵$(X^TX)$的逆矩阵。令$\\; \\hat{x}_i=(x_i, 1)\\;$故，可得多元线性回归模型为\n",
     "$$f(\\hat{x}_i)={\\hat{x}_i}^T(X^TX)^{-1}X^Ty$$\n",
     "\n",
-    ">> **上述内容参考周志华老师的《机器学习》**\n",
+    ">> **上述内容部分参考周志华老师的《机器学习》**\n",
     "\n",
     "\n",
     "正则化(regularization)\n",
@@ -107,7 +107,38 @@
    "metadata": {},
    "source": [
     "> Lasso回归和岭回归最重要的区别是，岭回归中随着惩罚项增加时，所以项都会减小，但是仍然保持非0的状态，然而Lasso回归中，随着惩罚项的增加时，越来越多的参数会直接变为0，正是这个优势使得lasso回归容易用作特征的选择（对应参数非0项），因此lasso回归可以说能很好的保留那些具有重要意义的特征而去掉那些那些意义不大甚至毫无意义的特征（如果是超多维的稀疏矩阵，这难道不是在垃圾中寻找黄金的“掘金术”吗？），而岭回归永远不会认为一个特征是毫无意义的。 \n",
-    ">      在某些情况下，L1正则化真是非常好的一个东西啊，因为他的本领和解决问题的绝招就是倾向于将越多的参数变为0，也就意味着最终的近似解只依赖很少的变量，所以它也是最近时间很火的压缩感知的基石，抓住事物的本质，抓住主要矛盾，也许有时候面面俱到（比如说什么特征都照顾到）反而什么认识也得不出，所以我不成熟的认识是：L1正则化从实现层面上，提出了一个非常好的技术路线，从而实现了马克思主义哲学上的如何“抓主要矛盾”，诸多感慨就是，看了大量机器学习算法，降维，投影或者影射（嵌入），缩减，压缩，隐含变量近似分解等思想随处可见，似乎让我感觉到在某种思想的指引下，这些方法心有灵犀，但是也有一个担忧就是感觉，机器学习的算法总是跳不出这个逻辑框架和圈子，虽然形式看丰富多彩，效果也在一定程度上各异，但我还是希望能看到更多的完全不一样的逻辑框架和思路，害怕我们在进行循环证实或者说“小修小补”，而没有全新的革命性突破，没有进行基因“突变”，类似于“收敛到一个局部最优解”，我们是不是应该像遗传算法中的“灾变”那样勇敢地跳出来？从这个角度来说，我个人比较偏爱深度学习，尤其是那个琢磨不定的人工神经网络模型（虽然不喜欢他还是采用了和Logist回归中类似的Sigmoid函数来模拟神经元的输出），不好意思，跑偏了。"
+    ">      在某些情况下，L1正则化真是非常好的一个东西啊，因为他的本领和解决问题的绝招就是倾向于将越多的参数变为0，也就意味着最终的近似解只依赖很少的变量，所以它也是最近时间很火的压缩感知的基石，抓住事物的本质，抓住主要矛盾，也许有时候面面俱到（比如说什么特征都照顾到）反而什么认识也得不出，所以我不成熟的认识是：L1正则化从实现层面上，提出了一个非常好的技术路线，从而实现了马克思主义哲学上的如何“抓主要矛盾”，诸多感慨就是，看了大量机器学习算法，降维，投影或者影射（嵌入），缩减，压缩，隐含变量近似分解等思想随处可见，似乎让我感觉到在某种思想的指引下，这些方法心有灵犀，但是也有一个担忧就是感觉，机器学习的算法总是跳不出这个逻辑框架和圈子，虽然形式看丰富多彩，效果也在一定程度上各异，但我还是希望能看到更多的完全不一样的逻辑框架和思路，害怕我们在进行循环证实或者说“小修小补”，而没有全新的革命性突破，没有进行基因“突变”，类似于“收敛到一个局部最优解”，我们是不是应该像遗传算法中的“灾变”那样勇敢地跳出来？从这个角度来说，我个人比较偏爱深度学习，尤其是那个琢磨不定的人工神经网络模型（虽然不喜欢他还是采用了和Logist回归中类似的Sigmoid函数来模拟神经元的输出），不好意思，跑偏了。\n",
+    "\n",
+    "\n",
+    "> 我们可能期望建⽴相对复杂和灵活的模型。 经 常⽤来控制过拟合现象的⼀种技术是正则化（regularization）。 这种技术涉及到给误差函数 （1.2）增加⼀个惩罚项，使得系数不会达到很⼤的值。这种惩罚项最简单的形式采⽤所有系数 的平⽅和的形式。\n",
+    "\n",
+    "\n",
+    "> 模型选择的典型方法是正则化。正则化是结构风险最小化策略的实现，是在经验风险上加一个正则化项(regularizer)或罚项(penalty term)。正则化项一般是模型复杂度的单调递增函数，模型越复杂，正则化值就越大。比如，正则化项可以是模型参数向量的范数。\n",
+    "\n",
+    "> 正则化符合奥卡姆剃刀(Occam's razor)原理。奥卡姆剃刀原理应用于模型选择时变为以下想法：在所有可能选择的模型中，能够很好地解释已知数据并且十分简单才是最好的模型，也就是应该选择的模型。从贝叶斯估计的角度来看，正则化项对应于模型的先验概率。可以假设复杂的模型有较大的先验概率，简单的模型有较小的先验概率。\n",
+    "\n",
+    "> 概括而言就是一句话总结：1范数和0范数可以实现稀疏，L1因具有比L0更好的优化求解特性而被广泛应用。然后L2范数，是下面这么理解的，我就直接查别人给的解释好了，反正简单，就不自己动脑子解释了：L2范数是指向量各元素的平方和然后求平方根。我们让L2范数的正则项||W||2最小，可以使得W的每个元素都很小，都接近于0，但与L1范数不同，它不会让它等于0，而是接近于0，这里是有很大的区别的哦；所以大家比起1范数，更钟爱2范数。\n",
+    "\n",
+    "> 惩罚项变成1范数即weights分量的绝对值后Total cost在收敛的过程中会使一些分量变为0变为0的分量对结果影响较小，即对应的feature相对不重要。因此lasso regression也有对features进行筛选的作用。\n",
+    "\n",
+    "> 从贝叶斯角度而言，不同的regularization代表了对权重使用不同的先验分布\n",
+    "\n",
+    "> Lasso是一阶正则化，岭回归是二阶。lasso的出发点是减少overfit，而岭回归一般认为是处理多重共线性的一种做法，当然它也有降低overfit的作用。lasso实际上是挑选自变量的一种做法，岭回归是压缩某些系数。二者都会在训练集上放大误差，但是均能在测试集上减小估计误差（理论上）。\n",
+    "\n",
+    "> 经验值 MSE前系数为1 ，L1 , L2正则前面系数一般为0.4~0.5 更看重的是准确性。\n",
+    "\n",
+    "> L2正则会整体的把w变小。\n",
+    "\n",
+    "> L1正则会倾向于使得w要么取1，要么取0 ，稀疏矩阵 ，可以达到降维的角度。\n",
+    "\n",
+    "> 总结：\n",
+    ">> 1.默认情况下选用L2正则。\n",
+    "\n",
+    ">> 2.如若认为少数特征有用，可以用L1正则。\n",
+    "\n",
+    ">> 3.如若认为少数特征有用，但特征数大于样本数，则选择ElasticNet函数。\n",
+    "\n",
+    "> http://blog.csdn.net/bryan__/article/details/52338151"
    ]
   },
   {
