--- a/Regression/Linear Regression.ipynb
+++ b/Regression/Linear Regression.ipynb
@@ -138,7 +138,23 @@
     "\n",
     ">> 3.如若认为少数特征有用，但特征数大于样本数，则选择ElasticNet函数。\n",
     "\n",
-    "> http://blog.csdn.net/bryan__/article/details/52338151"
+    "> http://blog.csdn.net/bryan__/article/details/52338151\n",
+    "\n",
+    "> 如果发生过拟合， 参数θ一般是比较大的值， 加入惩罚项后， 只要控制λ的大小，当λ很大时，θ1到θn就会很小，即达到了约束数量庞大的特征的目的。\n",
+    "\n",
+    "> 从贝叶斯的角度来分析， 正则化是为模型参数估计增加一个先验知识，先验知识会引导损失函数最小值过程朝着约束方向迭代。 L1正则是Laplace先验，L2是高斯先验。整个最优化问题可以看做是一个最大后验估计，其中正则化项对应后验估计中的先验信息，损失函数对应后验估计中的似然函数，两者的乘积即对应贝叶斯最大后验估计。\n",
+    "\n",
+    "> https://ask.hellobi.com/blog/guodongwei1991/9076\n",
+    "\n",
+    "> http://web.mit.edu/zoya/www/linearRegression.pdf\n",
+    "\n",
+    "> http://www.cs.cmu.edu/~aarti/Class/10701_Spring14/slides/linear_regression.pdf\n",
+    "\n",
+    "> https://webdocs.cs.ualberta.ca/~rgreiner/C-466/SLIDES/3b-Regression.pdf\n",
+    "\n",
+    "> http://vda.univie.ac.at/Teaching/ML/15s/LectureNotes/03_regression.pdf\n",
+    "\n",
+    "> "
    ]
   },
   {
