--- a/Regression/Linear Regression.ipynb
+++ b/Regression/Linear Regression.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "> \n",
     "$$\\begin{align}\n",
-    "\\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}} &= \\frac{1}{2}(2X^TX\\omega-X^Ty-0)    \\\\\n",
+    "\\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}} &= \\frac{1}{2}(2X^TX\\omega-2X^Ty-0)    \\\\\n",
     "&=\\frac{1}{2}(2X^TX\\omega-2X^Ty)  \\\\\n",
     "&=X^TX\\omega-X^Ty  \\\\\n",
     "\\end{align}$$\n",
@@ -90,16 +90,39 @@
     "$$\\begin{align}\n",
     "X^TX\\hat{\\omega}-X^Ty&=0 \\\\\n",
     "X^TX\\hat{\\omega}&=X^Ty \\\\\n",
-    "\\hat{\\omega}&=(X^TX)^{-1}X^Ty\\\\\n",
+    "\\hat{\\omega}&=(X^TX)^{-1}X^Ty \\qquad (6)\\\\\n",
     "\\end{align}$$\n",
     "> 其中$(X^TX)^{-1}$是矩阵$(X^TX)$的逆矩阵。令$\\; \\hat{x}_i=(x_i, 1)\\;$故，可得多元线性回归模型为\n",
     "$$f(\\hat{x}_i)={\\hat{x}_i}^T(X^TX)^{-1}X^Ty$$\n",
     "\n",
-    ">> **上述内容部分参考周志华老师的《机器学习》**\n",
-    "\n",
-    "\n",
+    ">> **上述内容部分参考周志华老师的《机器学习》**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "正则化(regularization)\n",
-    "------------------\n"
+    "------------------\n",
+    "> 对于(6)式，如果矩阵$X$有$d>m$，则$X^TX$不是满秩的，$\\hat{\\omega}$会有无穷多个解。\n",
+    "如果从所有可行解里随机选一个的话，很可能并不是真正好的解，此时模型overfitting了。解决 overfitting 最常用的办法就是 regularization\n",
+    "\n",
+    "### LASSO Regression(least absolute shrinkage and selection operator)\n",
+    "> LASSO Regression表示如下：\n",
+    "$$\\begin{align}\n",
+    "E_{\\hat{\\omega}} &=\\frac{1}{2}(X\\hat{\\omega}-y)^T(X\\hat{\\omega}-y)+\\lambda \\begin{Vmatrix} \\omega \\end{Vmatrix}_1\\\\\n",
+    "& =\\frac{1}{2}(\\hat{\\omega}^TX^TX\\hat{\\omega}-2y^TX\\hat{\\omega}+y^Ty)+\\lambda \\begin{Vmatrix} \\omega \\end{Vmatrix}_1\n",
+    "\\end{align}$$\n",
+    "\n",
+    "> **gradient存在，此时$\\bar{\\omega}^j\\neq 0$**\n",
+    "\n",
+    "\n",
+    "\n",
+    "> LASSO是一个convex optimization问题，它的优良性质是能产生稀疏性，导致$\\omega$中许多项变成0。\n",
+    "\n",
+    "\n",
+    "\n",
+    "> Lasso Regression 的损失函数不是连续可导的，由于L1范数用的是绝对值之和，导致损失函数有不可导的点。也就是说，最小二乘法、梯度下降法、牛顿法与拟牛顿法对它统统失效了。对于Lasso Regression采用坐标轴下降法（coordinate descent）和最小角回归法（Least Angle Regression，LARS）求极值解法。　　　　　　"
    ]
   },
   {
@@ -153,6 +176,14 @@
     "> https://webdocs.cs.ualberta.ca/~rgreiner/C-466/SLIDES/3b-Regression.pdf\n",
     "\n",
     "> http://vda.univie.ac.at/Teaching/ML/15s/LectureNotes/03_regression.pdf\n",
+    "\n",
+    ">  直接求解w^=(XTX)−1Xy (即最小二乘法,又称最小平方法)可能会遇到什么问题？ \n",
+    ">>      （1）只有当矩阵X是满秩的时候，才可以用最小二乘法。也就是多个因变量必须是相互独立的，如果相互之间关联较强，或者样本点比较少的时候，很可能造成X就不是满秩的，因为X−1是不可逆的。 \n",
+    ">>      （2）计算大型逆矩阵复杂度高，在处理大规模数据的时候，耗时长。\n",
+    "\n",
+    "> http://blog.csdn.net/qq_34531825/article/details/52689654\n",
+    "\n",
+    "> http://freemind.pluskid.org/machine-learning/sparsity-and-some-basics-of-l1-regularization/#ed61992b37932e208ae114be75e42a3e6dc34cb3\n",
     "\n",
     "> "
    ]
