--- a/Regression/Linear Regression.ipynb
+++ b/Regression/Linear Regression.ipynb
@@ -114,9 +114,27 @@
     "& =\\frac{1}{2}(\\hat{\\omega}^TX^TX\\hat{\\omega}-2y^TX\\hat{\\omega}+y^Ty)+\\lambda \\begin{Vmatrix} \\omega \\end{Vmatrix}_1\n",
     "\\end{align}$$\n",
     "\n",
-    "> **gradient存在，此时$\\bar{\\omega}^j\\neq 0$**\n",
+    "> **1、gradient存在，此时$\\bar{\\omega}^j\\neq 0$**\n",
+    "$$\\left. \\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}} \\right| _{\\; \\omega^j}=0$$\n",
     "\n",
+    "> 所以$$(X^TX\\omega - X^Ty)_j + \\lambda \\cdot sgn(\\omega^j)=0$$\n",
     "\n",
+    "> 其中，$\\lambda \\geq 0$，所以$$\\omega^j=\\omega^{*j}-\\lambda \\cdot sgn(\\omega^j)$$\n",
+    "\n",
+    "> 可得，$\\omega^j$和$\\omega^{*j}$是同号的，$$\\omega^j=\\omega^{*j}-\\lambda \\cdot sgn(\\omega^j)=sgn(\\omega^{*j})(| \\omega^{*j} |-\\lambda)$$\n",
+    "$$|\\omega_{*j}|-\\lambda$$\n",
+    "$$(\\omega_{*j}-\\lambda)=|\\omega^j|\\geq 0$$\n",
+    "\n",
+    "> 最终可得$$\\omega^j=sgn(\\omega^{*j})(|\\omega^{*j}|-\\lambda)_+$$\n",
+    "\n",
+    "> 其中$(X)_+$表示取$X$的正整数部分，$(X)_+=max(x,0)$\n",
+    "\n",
+    "> **2、gradient不存在，此时$\\bar{\\omega}^j = 0$**\n",
+    "\n",
+    "> *点$x_o$是凸函数$f$的全局最小值，当且仅当$0\\in \\partial f(x_o)$*\n",
+    "\n",
+    "> 如果$\\omega^j$ 是最小值，则\n",
+    "$$0 \\in \\partial E_{\\hat{\\omega}}=(X^TX\\omega-X^TX\\omega)+\\lambda\\cdot e = \\omega-\\omega^*+\\lambda\\cdot e$$\n",
     "\n",
     "> LASSO是一个convex optimization问题，它的优良性质是能产生稀疏性，导致$\\omega$中许多项变成0。\n",
     "\n",
@@ -986,12 +1004,12 @@
     }
    ],
    "source": [
-    "#GRADIENT DESCENT\n",
-    "alpha = 0.01 #Step size\n",
-    "iterations = 2000 #No. of iterations\n",
-    "m = y.size #No. of data points\n",
-    "np.random.seed(123) #Set the seed\n",
-    "theta = np.random.rand(2) #Pick some random values to start with\n",
+    "# GRADIENT DESCENT\n",
+    "alpha = 0.01 # Step size\n",
+    "iterations = 2000 # No. of iterations\n",
+    "m = y.size # No. of data points\n",
+    "np.random.seed(123) # Set the seed\n",
+    "theta = np.random.rand(2) # Pick some random values to start with\n",
     "\n",
     "\n",
     "#GRADIENT DESCENT\n",
