--- a/Regression/Linear Regression.ipynb
+++ b/Regression/Linear Regression.ipynb
@@ -104,10 +104,10 @@
    "source": [
     "正则化(regularization)\n",
     "------------------\n",
-    "> 对于(6)式，如果矩阵$X$有$d>m$，则$X^TX$不是满秩的，$\\hat{\\omega}$会有无穷多个解。\n",
+    "> 对于(6)式，如果矩阵$X$有$d>m$，则$X^TX$不是满秩的，或者某些特征之间的线性相关性比较大时，$\\hat{\\omega}$会有无穷多个解。\n",
     "如果从所有可行解里随机选一个的话，很可能并不是真正好的解，此时模型overfitting了。解决 overfitting 最常用的办法就是 regularization\n",
     "\n",
-    "### LASSO Regression(least absolute shrinkage and selection operator)\n",
+    "### 1、LASSO Regression(least absolute shrinkage and selection operator)\n",
     "> LASSO Regression表示如下：\n",
     "$$\\begin{align}\n",
     "E_{\\hat{\\omega}} &=\\frac{1}{2}(X\\hat{\\omega}-y)^T(X\\hat{\\omega}-y)+\\lambda \\begin{Vmatrix} \\omega \\end{Vmatrix}_1\\\\\n",
@@ -122,8 +122,7 @@
     "> 其中，$\\lambda \\geq 0$，所以$$\\omega^j=\\omega^{*j}-\\lambda \\cdot sgn(\\omega^j)$$\n",
     "\n",
     "> 可得，$\\omega^j$和$\\omega^{*j}$是同号的，$$\\omega^j=\\omega^{*j}-\\lambda \\cdot sgn(\\omega^j)=sgn(\\omega^{*j})(| \\omega^{*j} |-\\lambda)$$\n",
-    "$$|\\omega_{*j}|-\\lambda$$\n",
-    "$$(\\omega_{*j}-\\lambda)=|\\omega^j|\\geq 0$$\n",
+    "$$(|\\omega_{*j}|-\\lambda)=|\\omega^j|\\geq 0$$\n",
     "\n",
     "> 最终可得$$\\omega^j=sgn(\\omega^{*j})(|\\omega^{*j}|-\\lambda)_+$$\n",
     "\n",
@@ -131,10 +130,13 @@
     "\n",
     "> **2、gradient不存在，此时$\\bar{\\omega}^j = 0$**\n",
     "\n",
-    "> *点$x_o$是凸函数$f$的全局最小值，当且仅当$0\\in \\partial f(x_o)$*\n",
+    "> **定理：** *点$x_o$是凸函数$f$的全局最小值，当且仅当$0\\in \\partial f(x_o)$*\n",
     "\n",
     "> 如果$\\omega^j$ 是最小值，则\n",
-    "$$0 \\in \\partial E_{\\hat{\\omega}}=(X^TX\\omega-X^TX\\omega)+\\lambda\\cdot e = \\omega-\\omega^*+\\lambda\\cdot e$$\n",
+    "$$0 \\in \\partial E_{\\hat{\\omega}}=(X^TX\\omega-X^Ty)+\\lambda\\cdot e = \\omega-\\omega^*+\\lambda\\cdot e$$\n",
+    "> 其中$e$是一个向量，每一个元素$e^j\\in [-1, 1]$，使得$0=-\\omega^{*j}+\\lambda\\cdot e^j$成立。因此，$$|\\omega^{*j}|=\\lambda|e^j|\\leq \\lambda$$\n",
+    "\n",
+    ">> 综上所述，可得LASSO Regression的$\\omega$求解公式：$$\\omega^j=sgn(\\omega^{*j}){(|\\omega^{*j}|-\\lambda)}_+$$ \n",
     "\n",
     "> LASSO是一个convex optimization问题，它的优良性质是能产生稀疏性，导致$\\omega$中许多项变成0。\n",
     "\n",
@@ -147,30 +149,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Lasso回归和岭回归最重要的区别是，岭回归中随着惩罚项增加时，所以项都会减小，但是仍然保持非0的状态，然而Lasso回归中，随着惩罚项的增加时，越来越多的参数会直接变为0，正是这个优势使得lasso回归容易用作特征的选择（对应参数非0项），因此lasso回归可以说能很好的保留那些具有重要意义的特征而去掉那些那些意义不大甚至毫无意义的特征（如果是超多维的稀疏矩阵，这难道不是在垃圾中寻找黄金的“掘金术”吗？），而岭回归永远不会认为一个特征是毫无意义的。 \n",
-    ">      在某些情况下，L1正则化真是非常好的一个东西啊，因为他的本领和解决问题的绝招就是倾向于将越多的参数变为0，也就意味着最终的近似解只依赖很少的变量，所以它也是最近时间很火的压缩感知的基石，抓住事物的本质，抓住主要矛盾，也许有时候面面俱到（比如说什么特征都照顾到）反而什么认识也得不出，所以我不成熟的认识是：L1正则化从实现层面上，提出了一个非常好的技术路线，从而实现了马克思主义哲学上的如何“抓主要矛盾”，诸多感慨就是，看了大量机器学习算法，降维，投影或者影射（嵌入），缩减，压缩，隐含变量近似分解等思想随处可见，似乎让我感觉到在某种思想的指引下，这些方法心有灵犀，但是也有一个担忧就是感觉，机器学习的算法总是跳不出这个逻辑框架和圈子，虽然形式看丰富多彩，效果也在一定程度上各异，但我还是希望能看到更多的完全不一样的逻辑框架和思路，害怕我们在进行循环证实或者说“小修小补”，而没有全新的革命性突破，没有进行基因“突变”，类似于“收敛到一个局部最优解”，我们是不是应该像遗传算法中的“灾变”那样勇敢地跳出来？从这个角度来说，我个人比较偏爱深度学习，尤其是那个琢磨不定的人工神经网络模型（虽然不喜欢他还是采用了和Logist回归中类似的Sigmoid函数来模拟神经元的输出），不好意思，跑偏了。\n",
+    "### 2、Ridge Regression\n",
+    "> Ridge Regression表示如下：\n",
+    "$$$$\\begin{align}\n",
+    "E_{\\hat{\\omega}} &=\\frac{1}{2}(X\\hat{\\omega}-y)^T(X\\hat{\\omega}-y)+\\frac{\\lambda}{2} \\begin{Vmatrix} \\omega \\end{Vmatrix}^2\\\\\n",
+    "& =\\frac{1}{2}(\\hat{\\omega}^TX^TX\\hat{\\omega}-2y^TX\\hat{\\omega}+y^Ty)+\\frac{\\lambda}{2} \\begin{Vmatrix} \\omega \\end{Vmatrix}^2\n",
+    "\\end{align}$$$$\n",
     "\n",
+    "> 对损失函数关于$\\hat{\\omega}$求偏导：\n",
+    "$$\\begin{align}\n",
+    "\\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}} &= \\frac{1}{2}(2X^TX\\omega-2X^Ty-0)+ \\lambda \\omega  \\\\\n",
+    "&=\\frac{1}{2}(2X^TX\\omega-2X^Ty)+ \\lambda \\omega  \\\\\n",
+    "&=X^TX\\omega-X^Ty+ \\lambda \\omega  \\\\\n",
+    "\\end{align}$$\n",
     "\n",
-    "> 我们可能期望建⽴相对复杂和灵活的模型。 经 常⽤来控制过拟合现象的⼀种技术是正则化（regularization）。 这种技术涉及到给误差函数 （1.2）增加⼀个惩罚项，使得系数不会达到很⼤的值。这种惩罚项最简单的形式采⽤所有系数 的平⽅和的形式。\n",
+    "> 令$\\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}}=0$得：\n",
+    "$$\\hat{\\omega}=(X^TX-\\lambda I)^{-1}\\cdot X^Ty$$\n",
     "\n",
+    "> Ridge Regression损失函数关于$\\hat{\\omega}$偏导数存在，故使用随机梯度下降法(Stochastic Gradient Descent, SGD)求解$\\omega$\n",
+    "$$\\hat{\\omega_i}:=\\hat{\\omega_i}-\\alpha \\frac{\\partial E_{\\hat{\\omega}}}{\\partial \\hat{\\omega}} $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3、LOSSA & Ridge Regression 的认识\n",
+    "> Lasso回归和岭回归最重要的区别是，岭回归中随着惩罚项增加时，所有项都会减小，但是仍然保持非0的状态，然而Lasso回归中，随着惩罚项的增加，越来越多的参数会直接变为0，正是这个优势使得Lasso回归容易用作特征的选择（对应参数非0项），因此Lasso回归可以说能很好的保留那些具有重要意义的特征而去掉那些意义不大甚至毫无意义的特征，而岭回归永远不会认为一个特征是毫无意义的。 \n",
     "\n",
     "> 模型选择的典型方法是正则化。正则化是结构风险最小化策略的实现，是在经验风险上加一个正则化项(regularizer)或罚项(penalty term)。正则化项一般是模型复杂度的单调递增函数，模型越复杂，正则化值就越大。比如，正则化项可以是模型参数向量的范数。\n",
     "\n",
     "> 正则化符合奥卡姆剃刀(Occam's razor)原理。奥卡姆剃刀原理应用于模型选择时变为以下想法：在所有可能选择的模型中，能够很好地解释已知数据并且十分简单才是最好的模型，也就是应该选择的模型。从贝叶斯估计的角度来看，正则化项对应于模型的先验概率。可以假设复杂的模型有较大的先验概率，简单的模型有较小的先验概率。\n",
     "\n",
-    "> 概括而言就是一句话总结：1范数和0范数可以实现稀疏，L1因具有比L0更好的优化求解特性而被广泛应用。然后L2范数，是下面这么理解的，我就直接查别人给的解释好了，反正简单，就不自己动脑子解释了：L2范数是指向量各元素的平方和然后求平方根。我们让L2范数的正则项||W||2最小，可以使得W的每个元素都很小，都接近于0，但与L1范数不同，它不会让它等于0，而是接近于0，这里是有很大的区别的哦；所以大家比起1范数，更钟爱2范数。\n",
-    "\n",
-    "> 惩罚项变成1范数即weights分量的绝对值后Total cost在收敛的过程中会使一些分量变为0变为0的分量对结果影响较小，即对应的feature相对不重要。因此lasso regression也有对features进行筛选的作用。\n",
+    "> 概括而言就是一句话总结：1范数和0范数可以实现稀疏，L1因具有比L0更好的优化求解特性而被广泛应用。然后L2范数是指向量各元素的平方和然后求平方根。我们让L2范数的正则项||W||2最小，可以使得W的每个元素都很小，都接近于0，但与L1范数不同，它不会让它等于0，而是接近于0。\n",
     "\n",
     "> 从贝叶斯角度而言，不同的regularization代表了对权重使用不同的先验分布\n",
     "\n",
-    "> Lasso是一阶正则化，岭回归是二阶。lasso的出发点是减少overfit，而岭回归一般认为是处理多重共线性的一种做法，当然它也有降低overfit的作用。lasso实际上是挑选自变量的一种做法，岭回归是压缩某些系数。二者都会在训练集上放大误差，但是均能在测试集上减小估计误差（理论上）。\n",
-    "\n",
-    "> 经验值 MSE前系数为1 ，L1 , L2正则前面系数一般为0.4~0.5 更看重的是准确性。\n",
-    "\n",
-    "> L2正则会整体的把w变小。\n",
-    "\n",
-    "> L1正则会倾向于使得w要么取1，要么取0 ，稀疏矩阵 ，可以达到降维的角度。\n",
+    "> Lasso是一阶正则化，岭回归是二阶正则化。Lasso的出发点是减少overfit，而岭回归一般认为是处理多重共线性的一种做法，当然它也有降低overfit的作用。lasso实际上是挑选自变量的一种做法，岭回归是压缩某些系数。二者都会在训练集上放大误差，但是均能在测试集上减小估计误差（理论上）。\n",
     "\n",
     "> 总结：\n",
     ">> 1.默认情况下选用L2正则。\n",
@@ -179,31 +194,22 @@
     "\n",
     ">> 3.如若认为少数特征有用，但特征数大于样本数，则选择ElasticNet函数。\n",
     "\n",
-    "> http://blog.csdn.net/bryan__/article/details/52338151\n",
-    "\n",
-    "> 如果发生过拟合， 参数θ一般是比较大的值， 加入惩罚项后， 只要控制λ的大小，当λ很大时，θ1到θn就会很小，即达到了约束数量庞大的特征的目的。\n",
+    "> 如果发生过拟合， 参数$\\omega$一般是比较大的值，加入惩罚项后，只要控制λ的大小，当λ很大时，θ1到θn就会很小，即达到了约束数量庞大的特征的目的。\n",
     "\n",
     "> 从贝叶斯的角度来分析， 正则化是为模型参数估计增加一个先验知识，先验知识会引导损失函数最小值过程朝着约束方向迭代。 L1正则是Laplace先验，L2是高斯先验。整个最优化问题可以看做是一个最大后验估计，其中正则化项对应后验估计中的先验信息，损失函数对应后验估计中的似然函数，两者的乘积即对应贝叶斯最大后验估计。\n",
     "\n",
-    "> https://ask.hellobi.com/blog/guodongwei1991/9076\n",
+    ">  直接使用最小二乘法可能会遇到的问题： \n",
+    ">>（1）只有当矩阵X是满秩的时候，才可以用最小二乘法。也就是多个因变量必须是相互独立的，如果相互之间关联较强，或者样本点比较少的时候，很可能造成X就不是满秩的，因为$X^{-1}$是不可逆的。 \n",
     "\n",
-    "> http://web.mit.edu/zoya/www/linearRegression.pdf\n",
-    "\n",
-    "> http://www.cs.cmu.edu/~aarti/Class/10701_Spring14/slides/linear_regression.pdf\n",
-    "\n",
-    "> https://webdocs.cs.ualberta.ca/~rgreiner/C-466/SLIDES/3b-Regression.pdf\n",
-    "\n",
-    "> http://vda.univie.ac.at/Teaching/ML/15s/LectureNotes/03_regression.pdf\n",
-    "\n",
-    ">  直接求解w^=(XTX)−1Xy (即最小二乘法,又称最小平方法)可能会遇到什么问题？ \n",
-    ">>      （1）只有当矩阵X是满秩的时候，才可以用最小二乘法。也就是多个因变量必须是相互独立的，如果相互之间关联较强，或者样本点比较少的时候，很可能造成X就不是满秩的，因为X−1是不可逆的。 \n",
-    ">>      （2）计算大型逆矩阵复杂度高，在处理大规模数据的时候，耗时长。\n",
-    "\n",
-    "> http://blog.csdn.net/qq_34531825/article/details/52689654\n",
-    "\n",
-    "> http://freemind.pluskid.org/machine-learning/sparsity-and-some-basics-of-l1-regularization/#ed61992b37932e208ae114be75e42a3e6dc34cb3\n",
-    "\n",
-    "> "
+    ">>（2）计算大型逆矩阵复杂度高，在处理大规模数据的时候，耗时长。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python实现\n",
+    "### 1、最小二乘"
    ]
   },
   {
@@ -1153,15 +1159,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "> https://mubaris.com/2017/09/28/linear-regression-from-scratch/\n",
+    "\n",
+    "\n",
+    "> http://blog.csdn.net/bryan__/article/details/52338151\n",
+    "\n",
+    "> https://ask.hellobi.com/blog/guodongwei1991/9076\n",
+    "\n",
+    "> http://web.mit.edu/zoya/www/linearRegression.pdf\n",
+    "\n",
+    "> http://www.cs.cmu.edu/~aarti/Class/10701_Spring14/slides/linear_regression.pdf\n",
+    "\n",
+    "> https://webdocs.cs.ualberta.ca/~rgreiner/C-466/SLIDES/3b-Regression.pdf\n",
+    "\n",
+    "> http://vda.univie.ac.at/Teaching/ML/15s/LectureNotes/03_regression.pdf\n",
+    "\n",
+    "> http://blog.csdn.net/qq_34531825/article/details/52689654\n",
+    "\n",
+    "> http://freemind.pluskid.org/machine-learning/sparsity-and-some-basics-of-l1-regularization/#ed61992b37932e208ae114be75e42a3e6dc34cb3 \n",
+    "\n",
+    "> http://www.52caml.com/head_first_ml/ml-chapter1-regression-family/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "#https://mubaris.com/2017/09/28/linear-regression-from-scratch/"
-   ]
+   "source": []
   }
  ],
  "metadata": {
