--- a/02、Linear Regression/Linear Regression.ipynb
+++ b/02、Linear Regression/Linear Regression.ipynb
@@ -723,7 +723,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
