--- a/03、Logistic Regression/Logistic Regression.ipynb
+++ b/03、Logistic Regression/Logistic Regression.ipynb
@@ -34,6 +34,8 @@
     "**Logistic函数**\n",
     "> Logistic函数一般形式如下：\n",
     "$$g(z)=\\frac{1}{1+e^{-z}}$$\n",
+    ">> Logistic函数的一介导数(后面公式推导会用到)\n",
+    ">> $$g^{'}(z)=({\\frac{1}{1+e^{-z}}})^{'}=\\frac{e^{-z}}{(1+e^{-z})^2}=\\frac{1}{1+e^{-z}}\\cdot\\frac{e^{-z}}{1+e^{-z}}=\\frac{1}{1+e^{-z}}\\cdot(1-\\frac{1}{1+e^{-z}})=g(z)\\cdot(1-g(z))$$ \n",
     "> 对于线性边界的情况，边界形式如下：\n",
     "$$z=\\theta^Tx=\\theta_0x_0+\\theta_1x_1+\\cdots+\\theta_nx_n=\\sum^n_{i=0}\\theta_ix_i$$\n",
     "> 构造预测函数为：\n",
@@ -43,27 +45,75 @@
     "& P(Y=1|x;0)=h_{\\theta}(x) \\\\\n",
     "& P(Y=0|x;0)=1-h_{\\theta}(x)\n",
     "\\end{align}$$\n",
+    "\n",
+    "$$P(y|x;\\theta)=({h_\\theta(x)})^y(1-{h_\\theta(x)})^{1-y}$$\n",
+    "\n",
     "**构造损失函数J（m个样本，每个样本具有n个特征）**\n",
     "> Cost函数和J函数如下，它们是基于最大似然估计推导得到的：\n",
-    "$$Cost(h_{\\theta}(x),y)=\n",
-    "\\left\\{\n",
-    "\\begin{array}{ll}\n",
-    "-log(h_{\\theta(x)})\\;if\\;y=1 \\\\\n",
-    "-log(1-h_{\\theta(x)})\\;if\\;y=0\n",
-    "\\end{array} \n",
-    "\\right.\n",
-    "$$\n",
-    "$$J(\\theta)=\\frac{1}{m}\\sum^m_{i=1}Cost(h_{\\theta}(x_i),y_i)=-\\frac{1}{m}$$"
+    "\n",
+    "$$\\begin{align}\n",
+    "L(\\theta)&=p(\\vec{y}|X;\\theta)=\\prod^m_{i=1}p(y^{(i)}|x^{(i)};\\theta) \\\\\n",
+    "&=\\prod^m_{i=1}({{h_\\theta(x^{(i)})})^y}^{(i)}(1-{{h_\\theta(x)^{(i)}})^{1-y}}^{(i)}\n",
+    "\\end{align}$$\n",
+    "\n",
+    "> 对$L(\\theta)$取对数，可得：\n",
+    "$$l(\\theta)=log(L(\\theta))=\\sum^m_{i=1}y^{(i)}log(h_{\\theta}(x^{(i)}))+(1-y^{(i)})log(1-h_{\\theta}(x^{(i)}))$$\n",
+    "\n",
+    "> 对$l(\\theta)$求导：\n",
+    "$$\\begin{align}\n",
+    "\\frac{\\partial {l(\\theta)}} {\\partial{\\theta_j}}&=\\sum^m_{i=1}(\\frac{y^{(i)}}{h_{\\theta}(x^{(i)})}-\\frac{1-y^{(i)}}{1-h_{\\theta}(x^{(i)})})\\cdot \\frac{\\partial {h_{\\theta}(x^{(i)})}} {\\partial{\\theta_j}} \\\\\n",
+    "&=\\sum^m_{i=1}(\\frac{y^{(i)}}{g(\\theta^Tx^{(i)})}-\\frac{1-y^{(i)}}{1-g(\\theta^Tx^{(i)})})\\cdot \\frac{\\partial {g(\\theta^Tx^{(i)})}} {\\partial{\\theta_j}} \\\\\n",
+    "&=\\sum^m_{i=1}(\\frac{y^{(i)}}{g(\\theta^Tx^{(i)})}-\\frac{1-y^{(i)}}{1-g(\\theta^Tx^{(i)})})\\cdot g(\\theta^Tx^{(i)})\\cdot(1-g(\\theta^Tx^{(i)}))\\frac{\\partial {\\theta^Tx^{(i)}}} {\\partial{\\theta_j}} \\\\\n",
+    "&=\\sum^m_{i=1}(\\frac{y^{(i)}}{g(\\theta^Tx^{(i)})}-\\frac{1-y^{(i)}}{1-g(\\theta^Tx^{(i)})})\\cdot g(\\theta^Tx^{(i)})\\cdot(1-g(\\theta^Tx^{(i)}))\\frac{\\partial {\\theta^Tx^{(i)}}} {\\partial{\\theta_j}} \\\\\n",
+    "&=\\sum^m_{i=1}(y^{(i)}(1-g(\\theta^Tx^{(i)}))-(1-y^{(i)})g(\\theta^Tx^{(i)}))\\cdot x^{(i)}_j \\\\\n",
+    "&=\\sum^m_{i=1}(y^{(i)}-g(\\theta^Tx^{(i)}))\\cdot x^{(i)}_j \\\\\n",
+    "\\end{align}$$\n",
+    "\n",
+    "**随机梯度下降算法**\n",
+    "> 由$\\frac{\\partial {l(\\theta)}} {\\partial{\\theta_j}}=\\sum^m_{i=1}(y^{(i)}-g(\\theta^Tx^{(i)}))\\cdot x^{(i)}_j$可得Logistic Regression的随机梯度下降算法表示如下：\n",
+    "$$\\theta_j\\;:=\\theta_j+\\alpha\\sum^m_{i=1}(y^{(i)}-g(\\theta^Tx^{(i)}))\\cdot x^{(i)}_j $$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 3、正则化\n",
+    "> 采用正则的原因可以参考Linear Regression中的正则化，这部分能容主要介绍Logistic Regression下的L1、L2正则。\n",
+    "\n",
+    "**L1正则**\n",
+    "> 二元分类问题，响应变量$y\\in\\{0,1\\}$，每次观测的$p$个预测变量值表示为向量$x=[1,\\;x_1,\\;x_2,\\;\\cdots,x_p]$，相应的响应变量后验概率为\n",
+    "$$p(y=1|x)=\\varphi(\\omega^Tx)=-\\frac{1}{1+e^{-\\omega^Tx}}$$\n",
+    "> 其中$\\omega=[\\omega_0,\\;\\omega_1,;\\omega_2,\\;\\cdots,\\;\\omega_p,\\;]$为回归模型参数。\n",
+    "> 假定存在训练样本$D_n=\\{(x_i,\\;y_i)\\}^v_{i=1}$，根据训练样本数据及隶属类别$D_n$去估计$\\omega$，优化问题的损失函数为对数似然函数(log-likelihood)，表示为\n",
+    "$$arg\\;{max}_w\\{log\\;P(\\omega|D_n)\\}=arg\\;{max}_w\\{\\sum^n_{i=1}y_i\\;log(\\varphi(\\omega^Tx_i))+(1-y_i)log(1-\\varphi(\\omega^Tx_i))\\}$$\n",
+    "> 通过在线“shooting”算法求解L1正则化的Logistic回归模型。\n",
+    "*算法：*\n",
+    "> 对于$x_i$，根据其目标值$y_i=1$或$y_i=0$时，其对数似然函数分别为$log\\varphi(\\omega^Tx_i)$和$log\\varphi(1-\\omega^Tx_i)$，对于上述任意一种情形，可以采用对数似然函数在$\\omega^T_{i-1}x_i$邻域内的泰勒展开式去逼近，$\\omega_{i-1}$为通过前$i-1$个样本估计得到的模型参数值，$c_i$是与$\\omega$无关的函数，则对数似然函数近似值为：\n",
+    "$$\\sum^n_{i=1}\\;log(p(y_i|\\omega))\\approx\\sum^n_{i=1}(a_i(\\omega^Tx_i)^2+b_i(\\omega^Tx_i)+c_i)=\\omega^T\\psi_t\\omega+\\omega^T\\theta_t+\\sum^n_{i=1}c_i $$\n",
+    "> 因此原优化问题转化为逼近的优化问题：\n",
+    "$$arg\\;max_\\omega\\{log\\;p(\\omega|D_n)\\}=arg\\;max_\\omega\\{\\omega^T\\psi_n\\omega+\\omega^T\\theta_n-\\lambda||\\omega||_1\\}$$\n",
+    "> 其中，$\\psi_n=\\sum^n_{i=1}a_ix_ix^T_i$，$\\theta_n=\\sum^n_{i=1}b_ix_i$，定义$\\Omega=2\\psi^{'}\\omega+\\theta$，$a_i$，$b_i$由相应的对数似然函数在$\\omega^T_{i-1}x_i$处的二阶泰勒展开式的系数获得。\n",
+    "\n",
+    ">相应的“shooting”算法规则为：\n",
+    ">> 1)去迭代初始值$\\omega_0$;\n",
+    "\n",
+    ">> 2)在第$m$步，对所有$j=1$到$p$，令\n",
+    ">> $$\\omega_j=\\left\\{\n",
+    "\\begin{array}{ll}\n",
+    "0 & if \\; |\\Omega_j|\\leq\\lambda \\\\\n",
+    "\\frac{\\lambda-\\Omega_j}{2\\psi_{jj}} & if \\; |\\Omega_j|\\gt\\lambda \\\\\n",
+    "\\frac{-\\lambda-\\Omega_j}{2\\psi_{jj}} & if \\; |\\Omega_j|\\lt -\\lambda \\\\\n",
+    "\\end{array} \n",
+    "\\right. $$\n",
+    ">> 经过p次计算，用新的估计值替换上一步的结果.\n",
+    "\n",
+    ">> 3)重复第二步，直到$\\omega_m$收敛.\n",
+    "\n",
+    "**L2正则**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -83,6 +133,22 @@
     "> 推导 ： http://blog.csdn.net/chibangyuxun/article/details/53148005\n",
     "\n",
     "> Logistic Regression 就是一个被logistic方程归一化后的线性回归，仅此而已。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Softmax Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Max Entropy"
    ]
   },
   {
